# trr

./: .env.example  .gitignore  Makefile  NUL  README.md  docker-compose.yml  package-lock.json  skills.md
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  constraints.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_initial.py  20260430_0002_generic_record_abstraction.py  20260430_0003_minimize_record_text_storage.py  20260430_0004_remove_empty_records_after_minimization.py  20260430_0005_record_soft_delete_indexes.py  20260430_0006_subscription_entitlements_usage.py  20260430_0007_revoked_jwts.py  20260430_0008_auth_sessions.py  20260430_0009_rate_limit_counters.py  20260430_0010_profile_access_grants.py  20260430_0011_profile_access_grant_query_indexes.py  20260430_0012_user_profile_account_created_index.py  20260430_0013_auth_session_listing_index.py  20260430_0014_retention_prune_indexes.py  20260430_0015_profile_grant_scopes_gin_index.py  20260430_0016_subscription_active_lookup_index.py  20260430_0017_community_store_year_review_contracts.py  20260430_0019_store_coupon_fulfillment.py  (+12 more)
backend/app/: main.py
backend/tests/: helpers.py  test_ai_pipeline.py  test_auth_jwks.py  test_auth_oidc_login.py  test_auth_refresh.py  test_auth_sessions.py  test_community_store_year_review.py  test_config.py  test_daily_records.py  test_dev_reset.py  test_entitlements.py  test_health.py  test_permissions.py  test_profiles.py  test_record_schema_registry.py  test_records.py  test_reports.py  test_security_baseline.py
(+347 files in other folders)
