[project]
name = "bloodsugar-backend"
version = "0.1.0"
description = "Backend API for Tang Lu Lu"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "email-validator>=2.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.3.0",
  "PyJWT[crypto]>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.44,<2.1",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
